--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -4,15 +4,19 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b",
-    "dev":"npm run build && npm run start",
-    "start":"node/index.ts"
+    "dev": "npm run build && npm run start",
+    "start": "node .dist/index.js"
   },
   "devDependencies": {
-    "@repo/db":"workspace:*",
-    "@repo/typescript-config": "workspace:*"
+    "@repo/db": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@types/express": "^5.0.6"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.2.1"
+  }
 }
