--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b",
+    "dev":"npm run build && npm run start",
+    "start":"node/index.ts"
   },
   "devDependencies": {
     "@repo/db":"workspace:*",
