pipeline usernam change

--- a/.github/workflows/cd_staging.yaml
+++ b/.github/workflows/cd_staging.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: 54.206.134.230
-          username: root
+          username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/bookbook
